add_library(storage
  blockdevice/BlockDevice.h
  blockdevice/BufferedBlockDevice.cpp
  blockdevice/BufferedBlockDevice.h
  blockdevice/ChainingBlockDevice.cpp
  blockdevice/ChainingBlockDevice.h
  blockdevice/ExhaustibleBlockDevice.cpp
  blockdevice/ExhaustibleBlockDevice.h
  blockdevice/FlashSimBlockDevice.cpp
  blockdevice/FlashSimBlockDevice.h
  blockdevice/HeapBlockDevice.cpp
  blockdevice/HeapBlockDevice.h
  blockdevice/MBRBlockDevice.cpp
  blockdevice/MBRBlockDevice.h
  blockdevice/ObservingBlockDevice.cpp
  blockdevice/ObservingBlockDevice.h
  blockdevice/ProfilingBlockDevice.cpp
  blockdevice/ProfilingBlockDevice.h
  blockdevice/ReadOnlyBlockDevice.cpp
  blockdevice/ReadOnlyBlockDevice.h
  blockdevice/SlicingBlockDevice.cpp
  blockdevice/SlicingBlockDevice.h
  filesystem/Dir.cpp
  filesystem/Dir.h
  filesystem/File.cpp
  filesystem/File.h
  filesystem/FileSystem.cpp
  filesystem/FileSystem.h
  filesystem/fat/ChaN/diskio.h
  filesystem/fat/ChaN/ff.cpp
  filesystem/fat/ChaN/ff.h
  filesystem/fat/ChaN/ffconf.h
  filesystem/fat/ChaN/ffunicode.cpp
  filesystem/fat/ChaN/integer.h
  filesystem/fat/FATFileSystem.cpp
  filesystem/fat/FATFileSystem.h
  filesystem/littlefs/LittleFileSystem.cpp
  filesystem/littlefs/LittleFileSystem.h
  filesystem/littlefs/littlefs/lfs.c
  filesystem/littlefs/littlefs/lfs.h
  filesystem/littlefs/littlefs/lfs_util.c
  filesystem/littlefs/littlefs/lfs_util.h
  filesystem/mbed_filesystem.h
  kvstore/conf/kv_config.cpp
  kvstore/conf/kv_config.h
  kvstore/direct_access_devicekey/DirectAccessDevicekey.cpp
  kvstore/direct_access_devicekey/DirectAccessDevicekey.h
  kvstore/filesystemstore/FileSystemStore.cpp
  kvstore/filesystemstore/FileSystemStore.h
  kvstore/global_api/kvstore_global_api.cpp
  kvstore/global_api/kvstore_global_api.h
  kvstore/include/KVStore.h
  kvstore/kv_map/KVMap.cpp
  kvstore/kv_map/KVMap.h
  kvstore/securestore/SecureStore.cpp
  kvstore/securestore/SecureStore.h
  kvstore/tdbstore/TDBStore.cpp
  kvstore/tdbstore/TDBStore.h
  nvstore/source/nvstore.cpp
  nvstore/source/nvstore.h
  system_storage/SystemStorage.cpp
  system_storage/SystemStorage.h
)

target_link_libraries(storage platform)
target_link_libraries(storage device_key)
target_link_libraries(storage netsocket)

target_include_directories(storage
    PUBLIC
        .
        system_storage
        nvstore/source
        nvstore
        kvstore/tdbstore
        kvstore/securestore
        kvstore/kv_map
        kvstore/include
        kvstore/global_api
        kvstore/filesystemstore
        kvstore/direct_access_devicekey
        kvstore/conf
        kvstore
        filesystem/littlefs/littlefs
        filesystem/littlefs
        filesystem/fat/ChaN
        filesystem/fat
        filesystem
        blockdevice
)
